data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1168.wast
;; 9. **Test Description:**     - Design a loop structure where `unreachable` is inside blocks, with `br_if` conditions for exiting the blocks.    - **Constraint:** Ensure `unreachable` within blocks causes an immediate trap and prevents further block or loop execution.    - **Relation to Infinite Loops:** Mismanagement of control flow and `unreachable` can result in unintended infinite loops.    - **Expected Behavior:** Trap should occur due to `unreachable`.

(assert_invalid
  (module (func $type-loop-unreachable-inside-blocks
    (loop (block (br_if 0 (i32.const 0)) (unreachable)) (f32.const 1))
  ))
  "type mismatch"
)